syntax = "proto3";
option csharp_namespace = "UserService.API";
import "common.proto"; 
package userservice.api;

service UserService {
  rpc SignIn (GSignInRequest) returns (GSignInResponse);
  rpc SignUp (GSignUpRequest) returns (GSignUpResponse);
  rpc SignOut (GSignOutRequest) returns (GSignOutResponse);
  rpc ValidateToken (GValidateTokenRequest) returns (GValidateTokenResponse);
  rpc GetUserInfo (GGetUserInfoRequest) returns (GGetUserInfoResponse);
}

message GSignInRequest {
  string user_name = 1;
  string password = 2;
}
message GSignInResponse {
  common.GResponseStatus status = 1;
  string token = 2;
}

message GSignUpRequest {
  string user_name = 1;
  string password = 2;
  string e_mail = 3;
  string phone = 4;
}
message GSignUpResponse {
  common.GResponseStatus status = 1;
}

message GSignOutRequest {

}
message GSignOutResponse {
  common.GResponseStatus status = 1;
}

message GValidateTokenRequest {
  string token = 1;
}
message GValidateTokenResponse {
  common.GResponseStatus status = 1;
  bool valid = 2;
}

message GGetUserInfoRequest {
  string token = 1;
  string user_name = 2;
}
message GGetUserInfoResponse {
  common.GResponseStatus status = 1;
  string user_name = 2;
  string e_mail = 3;
  string phone = 4;
}